2003-03-07  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (main): Use the new sanity check function in
	libgames-support.

2003-03-06  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* README:
	* TODO: Remove, out-of-date files.

2003-03-03  Ross Burton  <ross@burtonini.com>

	* mahjongg.c: Add some NULL-checks so we don't crash so quickly
	when the schemas were not installed.

2003-02-26  Ross Burton  <ross@burtonini.com>

	* mahjongg.desktop.in: Remove the old Info key, as it is not used.

2003-02-19  Alex Duggan  <aldug@astrolinux.com>

	* help/C/mahjongg.xml: update old bug links from bugs.gnome.org to 
	bugzilla.gnome.org

2003-02-19  Alex Duggan  <aldug@astrolinux.com>

	* mahjongg.c (pref_dialog_response): remove old unused call to
	gnome_help_display,  (proporties_callback): remove help button
	from preferences dialog.  (Fixes #103928)

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/mahjongg-C.omf, help/C/mahjongg.xml: s/Gnome/GNOME.

	* mahjongg.c (new_game): Ensure that the current map is known when
	a game starts. Patch from Jeremy Browne
	<gnome-bugzilla@synonymous.ca>, fixing #99164.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* mahjongg.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* mahjongg.c (confirm action): Changes to restart / new game dialog for
	consistency with other parts of gnome-games package. (Bug #97321)

2002-10-31  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Use correct GConf install rules.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (you_won): Fix a silly logic bug. Fixes #92823.

2002-08-23  Ross Burton  <ross@burtonini.com>
